--- a/front-webApp/join.html
+++ b/front-webApp/join.html
@@ -50,29 +50,22 @@
 						<div class= "col-md-3 col-xs-3 label">
 							<h6> GRADE </h6>
 						</div>
-						<div class="col-md-3 col-xs-3 dropdown">
-							<button class="btn btn-secondary dropdown-toggle dropdown-grade " type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-								grade
-								<span class="caret"></span>
-							</button>
-							<div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-								<button class="dropdown-item" type="button" data-value = "1">1</button>
-								<button class="dropdown-item" type="button" data-value = "2">2</button>
-								<button class="dropdown-item" type="button" data-value = "3">3</button>
-								<button class="dropdown-item" type="button" data-value = "4">4</button>
-							</div>
+						<div class="container col-md-3 col-xs-3 dropdown-grade">
+							<select class="form-control">
+								<option>1</option> 
+								<option>2</option> 
+								<option>3</option> 
+								<option>4</option>
+							</select> 
 						</div>
 
-						<!--semester Dropdow tag -->
-						<div class="col-md-3 col-xs-3 dropdown">
-							<button class="btn btn-secondary dropdown-toggle dropdown-semester" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-								semester
-								<span class="caret"></span>
-							</button>
-							<div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-								<button class="dropdown-item" type="button" data-value = "1">1</button>
-								<button class="dropdown-item" type="button" data-value = "2">2</button>
-							</div>
+						<div class="container col-md-3 col-xs-3 dropdown-semester">
+							<select class="form-control">
+								<option>1</option> 
+								<option>2</option> 
+								<option>3</option> 
+								<option>4</option>
+							</select> 
 						</div>
 
 						<!--join/cancel button -->
