--- a/front-webApp/home.html
+++ b/front-webApp/home.html
@@ -1,42 +1,75 @@
 <!doctype html>
 <html lang="kr">
 <head>
-	<title>Home Page</title>
+	<title>HOME</title>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-	<!-- Costumize CSS -->
+	<!-- Customize CSS -->
 	<link rel="stylesheet" type="text/css" href="css/style_home.css">
 </head>
 
-
 <body class="text-center">
+
 	<!-- Container -->
 	<div class="container">
-		<div class="row justify-content-md-center justify-content-xs-center">
-			<div class="col-md-6 col-md-auto col-xs-6 col-xs-auto login-box ">
-				<h1 class="text-center wdi-red">HOME</h1>
-				<hr>
-				<form>
-					<div class="form-row">
+		<div class="row justify-content-md-center justify-content-xs-center row justify-content-sm-center justify-content-lg-center">
+			<div class="col-md-6 col-md-auto col-xs-6 col-xs-auto col-sm-6 col-sm-auto  col-lg-6 col-lg-auto  login-box ">
+				<header class="app-header py-1">
+					<div class="row justify-content-md-center justify-content-xs-center">
 
-						<div class= "col-md-12 col-xs-12">
-							<a class="btn btn-lg btn-block btn-logout" href="index.html"> LOGOUT</a>
+						<div class= "col-md-10 col-xs-10 col-sm-10 col-lg-10">
+							<h1 class="app-header-logo"> PATH </h1>
 						</div>
-
+						<div class= "col-md-2 col-xs-2 col-sm-2 col-lg-2">
+							<a class="btn btn-sm btn-block btn-logout" href="index.html"> LOGOUT</a>
+						</div>
 					</div>
 
-				</form>
-			</div>
+				</header>
+
+				<div class="jumbotron p-3 p-md-5 text-white rounded ">
+					<div class="col-md-6 col-sm-6 col-lg-6 col-xs-6 px-0">
+
+					</div>
+				</div>
+
+			<main role="main" class="container">
+				<div class="row">
+					<div class="col-md-8 col-sm-8 col-lg-8 col-xs-8  blog-main">
+
+
+					</div><!-- /.blog-main -->
+
+
+				</div><!-- /.row -->
+
+			</main><!-- /.container -->
+			
+			<footer class="app-footer">
+				<div class="nav-scroller py-1 mb-2">
+					<nav class="nav justify-content-between">
+						<a class="p-2 text-muted" href="#">HOME</a>
+						<a class="p-2 text-muted" href="#">MENU</a>
+						<a class="p-2 text-muted" href="#">TIME TABLE</a>
+						<a class="p-2 text-muted" href="#">MY PAGE</a>
+						<a class="p-2 text-muted" href="#">ASSIGNMENT</a>
+				</div>
+			</footer>
+
+
 		</div>
 	</div>
+</div>
 
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 </body>
 </html>
