--- a/front-webApp/join.html
+++ b/front-webApp/join.html
@@ -8,7 +8,7 @@
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-	<!-- Costumize CSS -->
+	<!-- Customize CSS -->
 	<link rel="stylesheet" type="text/css" href="css/style_join.css">
 </head>
 
