--- a/front-webApp/timetable_page.html
+++ b/front-webApp/timetable_page.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="kr">
 <head>
-	<title>HOME</title>
+	<title>timetable_page</title>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<!-- Customize CSS -->
-	<link rel="stylesheet" type="text/css" href="css/style_home.css">
+	<link rel="stylesheet" type="text/css" href="css/style_timetable_page.css">
 <!-- 
 	<link rel="import" herf="header_customize.html">
 	<link rel="import" herf="footer_customize.html"> -->
@@ -20,10 +20,10 @@
 
 	<!-- Container -->
 	<div class="container">
-		<div class="row justify-content-md-center justify-content-xs-center row justify-content-sm-center justify-content-lg-center">
-			<div class="col col-md-6 col-md-auto col-xs-6 col-xs-auto col-sm-6 col-sm-auto col-lg-6 col-lg-auto login-box ">
+		<div class="row justify-content-md-center justify-content-xs-center justify-content-sm-center justify-content-lg-center">
+			<div class="col-md-6 col-md-auto col-xs-6 col-xs-auto col-sm-6 col-sm-auto col-lg-6 col-lg-auto login-box ">
 
-				<!-- header (상단바) class="app-header" -->
+				<!-- header (상단바)-->
 				<header class="app-header">
 					<div class="row col-auto justify-content-end">
 						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
@@ -41,8 +41,7 @@
 
 				<!-- 상단바와 하단바를 제외한 부분 class="main-area" -->
 				<div class="jumbotron p-md-3 text-white rounded main-area">
-					
-					<div style="cursor:pointer" onclick="location.href='timetable_page.html';" >
+					<div>
 						<table class="table table-striped table-bordered table-time">
 							<thead>
 								<tr>
@@ -98,37 +97,22 @@
 							</tbody>
 						</table>
 					</div>
-				
-					<!-- 등록된 과제를 보여주는 scroll창 -->
-					<div style="overflow:auto; width:auto; height:150px;" class="preview-assignment">
-						<h6 id="one">-assignment1</h6>
-						<p>...</p>
-						<h6 id="two">-assignment2</h6>
-						<p>...</p>
-						<h6 id="three">-assignment3</h6>
-						<p>...</p>
-						<h6 id="four">-assignment4</h6>
-						<p>...</p>
-						<h6 id="five">-assignment5</h6>
-						<p>...</p>
-					</div>
-
 				</div> 
 
 				<!-- footer 하단바 class="app-footer" -->
 				<footer class="app-footer py-1">
 					<div class="nav-scroller mb-2">
 						<nav class="nav justify-content-between">
-							<a class="btn btn-default btn-icon  home"  aria-label="Left Align" href="home.html">
+							<a class="btn btn-default btn-icon assignment home"  aria-label="Left Align" href="home.html">
 								<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
 							</a>
-							<a class="btn btn-default btn-icon  menu" aria-label="Left Align" href="menu.html">
+							<a class="btn btn-default btn-icon assignment menu" aria-label="Left Align" href="menu.html">
 								<span class="glyphicon glyphicon glyphicon-align-justify" aria-hidden="true"></span>
 							</a>
-							<a  class="btn btn-default btn-icon  time-table" aria-label="Left Align" href="timetable_page.html">
+							<a  class="btn btn-default btn-icon assignment time-table" aria-label="Left Align" href="timetable_page.html">
 								<span class="glyphicon glyphicon glyphicon-th" aria-hidden="true"></span>
 							</a>
-							<a class="btn btn-default btn-icon  my-page" aria-label="Left Align"" href="mypage.html">
+							<a class="btn btn-default btn-icon assignment my-page" aria-label="Left Align"" href="mypage.html">
 								<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
 							</a>
 							<a class="btn btn-default btn-icon assignment" aria-label="Left Align" href="assignment.html">
@@ -137,6 +121,7 @@
 						</nav>
 					</div>
 				</footer>
+
 
 			</div>
 		</div>
