--- a/front-webApp/assignment_add.html
+++ b/front-webApp/assignment_add.html
@@ -97,7 +97,7 @@ star-input>.input.focus{outline:1px dotted #ddd;}
 						</div>
 
 						<div class= "col-md-12 col-xs-12">
-							<a class="btn btn-lg btn-block btn-cancel" href="home.html"> CANCEL</a>
+							<a class="btn btn-lg btn-block btn-cancel" href="assignment.html"> CANCEL</a>
 						</div>
 
 					</div>
