--- a/front-webApp/assignment.html
+++ b/front-webApp/assignment.html
@@ -14,6 +14,8 @@
 <!-- 
 	<link rel="import" herf="header_customize.html">
 	<link rel="import" herf="footer_customize.html"> -->
+
+
 </head>
 
 <body class="text-center">
@@ -31,6 +33,7 @@
 						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
 							<h2 class="app-header-logo"> PATH </h2>
 						</div>
+						<!-- log-out 아이콘 버튼 누르면 index.html로 이동 -->
 						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
 							<a class="btn btn-default btn-log-out"  aria-label="Left Align" href="index.html">
 								<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
@@ -39,10 +42,71 @@
 					</div>
 				</header>
 
+
 				<!-- 상단바와 하단바를 제외한 부분 class="main-area" -->
-				<div class="jumbotron p-md-3 text-white rounded main-area">
-					
-				</div> 
+				<div class="jumbotron m-2 p-0 text-white rounded main-area">
+
+					<!--  개인인지 팀플인지,,, 추가 등 설정 버튼들 있는 영역-->
+					<div class="row col-auto justify-content-end setting">
+						<div class= "p-0 col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
+							<div class="btn-group" role="group" aria-label="Basic example">
+								<button type="button" class="btn btn-sm btn-assigntype">Team</button>
+								<button type="button" class="btn btn-sm btn-assigntype">Non</button>
+							</div>
+						</div>
+
+
+						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
+						</div>
+
+
+						<!-- log-out 아이콘 버튼 누르면 assignment_add.html로 이동 -->
+						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
+							<a class="btn btn-lg btn-add p-0" aria-label="Left Align" href="assignment_add.html">
+								<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
+							</a>
+							<a class="btn btn-lg btn-add p-0 " aria-label="Left Align" href="assignment_add.html">
+								<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>
+							</a>
+
+						</div>
+					</div>
+
+
+
+					<!-- 과제전체 보여주는 영역 -->
+					<div style="overflow:auto; width:auto; height:300px;" class="mt-3 assignment-all scrollbar scrollbar-track scrollbar-thumb" data-offset="0">
+						<div class="assign-each">
+							<h6 id="one" style="font-weight: bold" class="mb-2 mt-0">-assignment1</h6>
+							<p6>text</p6>						
+						</div>
+						<div class=" assign-each">
+							<h6 id="two" style="font-weight: bold" class="mb-2">-assignment2</h6>
+							<p6>text</p6>								
+						</div>
+						<div class="assign-each">
+							<h6 id="three" style="font-weight: bold" class="mb-2">-assignment3</h6>
+							<p6>text</p6>						
+						</div>
+						<div class="assign-each">
+							<h6 id="four" style="font-weight: bold" class="mb-2">-assignment4</h6>
+							<p6>text</p6>								
+						</div>
+						<div class="assign-each">
+							<h6 id="five" style="font-weight: bold" class="mb-2">-assignment5</h6>
+							<p6>text</p6>				
+						</div>
+						<div class="assign-each">
+							<h6 id="five" style="font-weight: bold" class="mb-2">-assignment6</h6>
+							<p6>text</p6>				
+						</div>
+						<div class="assign-each">
+							<h6 id="five" style="font-weight: bold" class="mb-2">-assignment7</h6>
+							<p6>text</p6>				
+						</div>			
+					</div>
+				</div>
+
 
 				<!-- footer 하단바 class="app-footer" -->
 				<footer class="app-footer py-1">
