--- a/front-webApp/assignment_add.html
+++ b/front-webApp/assignment_add.html
@@ -24,7 +24,7 @@
 					<div class="form-row">
 
 						<div class= "col-md-12 col-xs-12">
-							<a class="btn btn-lg btn-block btn-cancel" href="index.html"> CANCEL</a>
+							<a class="btn btn-lg btn-block btn-cancel" href="assignment.html"> CANCEL</a>
 						</div>
 
 					</div>
