--- a/front-webApp/home.html
+++ b/front-webApp/home.html
@@ -21,7 +21,7 @@
 	<!-- Container -->
 	<div class="container">
 		<div class="row justify-content-md-center justify-content-xs-center row justify-content-sm-center justify-content-lg-center">
-			<div class="col col-md-6 col-md-auto col-xs-6 col-xs-auto col-sm-6 col-sm-auto col-lg-6 col-lg-auto login-box ">
+			<div class="col-md-6 col-md-auto col-xs-6 col-xs-auto col-sm-6 col-sm-auto col-lg-6 col-lg-auto login-box ">
 
 				<!-- header (상단바) class="app-header" -->
 				<header class="app-header">
@@ -31,8 +31,9 @@
 						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
 							<h2 class="app-header-logo"> PATH </h2>
 						</div>
+						<!-- log-out 아이콘 버튼 누르면 index.html로 이동 -->
 						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
-							<a class="btn btn-default btn-log-out"  aria-label="Left Align" href="index.html">
+							<a class="btn btn-default btn-log-out" aria-label="Left Align" href="index.html">
 								<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
 							</a>
 						</div>
@@ -40,8 +41,7 @@
 				</header>
 
 				<!-- 상단바와 하단바를 제외한 부분 class="main-area" -->
-				<div class="jumbotron p-md-3 text-white rounded main-area">
-					
+				<div class="jumbotron p-md-0 text-white main-area">
 					<div style="cursor:pointer" onclick="location.href='timetable_page.html';" >
 						<table class="table table-striped table-bordered table-time">
 							<thead>
@@ -98,9 +98,9 @@
 							</tbody>
 						</table>
 					</div>
-				
+
 					<!-- 등록된 과제를 보여주는 scroll창 -->
-					<div style="overflow:auto; width:auto; height:150px;" class="preview-assignment">
+					<div style="overflow:auto; width:auto; height:130px;" class="mt-3 preview-assignment scrollbar scrollbar-track scrollbar-thumb" data-spy="scroll" data-offset="0">
 						<h6 id="one">-assignment1</h6>
 						<p>...</p>
 						<h6 id="two">-assignment2</h6>
