--- a/front-webApp/mypage.html
+++ b/front-webApp/mypage.html
@@ -31,6 +31,7 @@
 						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
 							<h2 class="app-header-logo"> PATH </h2>
 						</div>
+						<!-- log-out 아이콘 버튼 누르면 index.html로 이동 -->
 						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
 							<a class="btn btn-default btn-log-out"  aria-label="Left Align" href="index.html">
 								<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
