--- a/front-webApp/timetable_page.html
+++ b/front-webApp/timetable_page.html
@@ -31,6 +31,7 @@
 						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
 							<h2 class="app-header-logo"> PATH </h2>
 						</div>
+						<!-- log-out 아이콘 버튼 누르면 index.html로 이동 -->
 						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
 							<a class="btn btn-default btn-log-out"  aria-label="Left Align" href="index.html">
 								<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
@@ -40,20 +41,23 @@
 				</header>
 
 				<!-- 상단바와 하단바를 제외한 부분 class="main-area" -->
-				<div class="jumbotron p-md-3 text-white rounded main-area">
+				<div class="jumbotron m-0 p-md-0 text-white rounded main-area">
 					<div>
+						<!-- 시간표 테이블 -->
 						<table class="table table-striped table-bordered table-time">
 							<thead>
+								<!-- 맨 윗줄-->
 								<tr>
-									<th>#</th>
-									<th>Mon</th>
-									<th>Tue</th>
-									<th>Wen</th>
-									<th>Thu</th>
-									<th>Fir</th>
+									<th class="text-center">#</th>
+									<th class="text-center">Mon</th>
+									<th class="text-center">Tue</th>
+									<th class="text-center">Wen</th>
+									<th class="text-center">Thu</th>
+									<th class="text-center">Fir</th>
 								</tr>
 							</thead>
 							<tbody>
+								<!-- 1행 -->
 								<tr>
 									<td>9-9:30</td>
 									<td>#</td>
@@ -62,6 +66,7 @@
 									<td>#</td>
 									<td>#</td>
 								</tr>
+								<!-- 2행 -->
 								<tr>
 									<td>9:30-10</td>
 									<td>#</td>
@@ -70,6 +75,7 @@
 									<td>#</td>
 									<td>#</td>
 								</tr>
+								<!-- 3행 -->
 								<tr>
 									<td>10-10:30</td>
 									<td>#</td>
@@ -78,7 +84,9 @@
 									<td>#</td>
 									<td>#</td>
 								</tr>
+								<!-- 4행 -->
 								<tr class="success">
+									<!-- success 는 색깔 떄문에 넣은거! -->
 									<td>10:30-11</td>
 									<td>#</td>
 									<td>#</td>
@@ -86,7 +94,9 @@
 									<td>#</td>
 									<td>#</td>a
 								</tr>
+								<!-- 5행 -->
 								<tr class="danger">
+									<!-- danger 는 색깔 떄문에 넣은거! -->
 									<td>11-11:30</td>
 									<td>#</td>
 									<td>#</td>
