--- a/front-webApp/assignment_add.html
+++ b/front-webApp/assignment_add.html
@@ -23,6 +23,7 @@ star-input>.input.focus{outline:1px dotted #ddd;}
 .star-input>output{display:inline-block;width:60px; font-size:18px;text-align:right; vertical-align:middle;}
 .col-md-12 {padding: 3px;}
 .form-row>.col, .form-row>[class*=col-]{padding-top : 5px;}
+
 </style>
 
 <head>
@@ -52,9 +53,15 @@ star-input>.input.focus{outline:1px dotted #ddd;}
 						<div class= "col-md-3 col-xs-3 label">
 							<h6> 과목명 </h6>
 						</div>
-						<div class= "col-md-9 col-xs-9">
+						<div class= "col-md-6 col-xs-6">
 							<input type="text"  class="form-control form-control-lg flat-input">
 						</div>
+						<div class= "col-md-3 col-xs-3">
+							<a class="btn" href="find_subject.html">
+							<img class="btn-img" width="30" height="30" src="img/find.png">
+							</a>
+						</div>
+
 
 						<!--PW lable/input tag -->
 						<div class= "col-md-3 col-xs-3 label">
