header(상단바) footer(하단바) timetable(시간표테이블) js로 따로 빼놓음

--- a/front-webApp/menu.html
+++ b/front-webApp/menu.html
@@ -11,9 +11,12 @@
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<!-- Customize CSS -->
 	<link rel="stylesheet" type="text/css" href="css/style_menu.css">
-<!-- 
-	<link rel="import" herf="header_customize.html">
-	<link rel="import" herf="footer_customize.html"> -->
+
+	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 </head>
 
 <body class="text-center">
@@ -24,21 +27,8 @@
 			<div class="col col-md-6 col-md-auto col-xs-6 col-xs-auto col-sm-6 col-sm-auto col-lg-6 col-lg-auto login-box ">
 
 				<!-- header (상단바)-->
-				<header class="app-header">
-					<div class="row col-auto justify-content-end">
-						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
-						</div>
-						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
-							<h2 class="app-header-logo"> PATH </h2>
-						</div>
-						<!-- log-out 아이콘 버튼 누르면 index.html로 이동 -->
-						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
-							<a class="btn btn-default btn-log-out"  aria-label="Left Align" href="index.html">
-								<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
-							</a>
-						</div>
-					</div>
-				</header>
+				<div id="header">
+				</div>			
 
 				<!-- 상단바와 하단바를 제외한 부분 class="main-area" -->
 				<div class="jumbotron p-md-3 text-white rounded main-area">
@@ -46,39 +36,13 @@
 				</div> 
 
 				<!-- footer 하단바 class="app-footer" -->
-				<footer class="app-footer py-1">
-					<div class="nav-scroller mb-2">
-						<nav class="nav justify-content-between">
-							<a class="btn btn-default btn-icon  home"  aria-label="Left Align" href="home.html">
-								<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-							</a>
-							<a class="btn btn-default btn-icon  menu" aria-label="Left Align" href="menu.html">
-								<span class="glyphicon glyphicon glyphicon-align-justify" aria-hidden="true"></span>
-							</a>
-							<a  class="btn btn-default btn-icon  time-table" aria-label="Left Align" href="timetable_page.html">
-								<span class="glyphicon glyphicon glyphicon-th" aria-hidden="true"></span>
-							</a>
-							<a class="btn btn-default btn-icon  my-page" aria-label="Left Align"" href="mypage.html">
-								<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-							</a>
-							<a class="btn btn-default btn-icon assignment" aria-label="Left Align" href="assignment.html">
-								<span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
-							</a>
-						</nav>
-					</div>
-				</footer>
-
+				<div id="footer">
+				</div>
 
 			</div>
 		</div>
 	</div>
-
-
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 </body>
 </html>
+<script src="js/common/header.js"></script>
+<script src="js/common/footer.js"></script>
