--- a/front-webApp/timetable_page.html
+++ b/front-webApp/timetable_page.html
@@ -11,9 +11,12 @@
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<!-- Customize CSS -->
 	<link rel="stylesheet" type="text/css" href="css/style_timetable_page.css">
-<!-- 
-	<link rel="import" herf="header_customize.html">
-	<link rel="import" herf="footer_customize.html"> -->
+ 
+	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 </head>
 
 <body class="text-center">
@@ -23,126 +26,25 @@
 		<div class="row justify-content-md-center justify-content-xs-center justify-content-sm-center justify-content-lg-center">
 			<div class="col-md-6 col-md-auto col-xs-6 col-xs-auto col-sm-6 col-sm-auto col-lg-6 col-lg-auto login-box ">
 
-				<!-- header (상단바)-->
-				<header class="app-header">
-					<div class="row col-auto justify-content-end">
-						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
-						</div>
-						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
-							<h2 class="app-header-logo"> PATH </h2>
-						</div>
-						<!-- log-out 아이콘 버튼 누르면 index.html로 이동 -->
-						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
-							<a class="btn btn-default btn-log-out"  aria-label="Left Align" href="index.html">
-								<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
-							</a>
-						</div>
-					</div>
-				</header>
+				<!-- header (상단바) class="app-header" -->
+				<div id="header">
+				</div>
 
 				<!-- 상단바와 하단바를 제외한 부분 class="main-area" -->
-				<div class="jumbotron m-0 p-md-0 text-white rounded main-area">
-					<div>
-						<!-- 시간표 테이블 -->
-						<table class="table table-striped table-bordered table-time">
-							<thead>
-								<!-- 맨 윗줄-->
-								<tr>
-									<th class="text-center">#</th>
-									<th class="text-center">Mon</th>
-									<th class="text-center">Tue</th>
-									<th class="text-center">Wen</th>
-									<th class="text-center">Thu</th>
-									<th class="text-center">Fir</th>
-								</tr>
-							</thead>
-							<tbody>
-								<!-- 1행 -->
-								<tr>
-									<td>9-9:30</td>
-									<td>#</td>
-									<td>#</td>
-									<td>#</td>
-									<td>#</td>
-									<td>#</td>
-								</tr>
-								<!-- 2행 -->
-								<tr>
-									<td>9:30-10</td>
-									<td>#</td>
-									<td>#</td>
-									<td>#</td>
-									<td>#</td>
-									<td>#</td>
-								</tr>
-								<!-- 3행 -->
-								<tr>
-									<td>10-10:30</td>
-									<td>#</td>
-									<td>#</td>
-									<td>#</td>
-									<td>#</td>
-									<td>#</td>
-								</tr>
-								<!-- 4행 -->
-								<tr class="success">
-									<!-- success 는 색깔 떄문에 넣은거! -->
-									<td>10:30-11</td>
-									<td>#</td>
-									<td>#</td>
-									<td>#</td>
-									<td>#</td>
-									<td>#</td>a
-								</tr>
-								<!-- 5행 -->
-								<tr class="danger">
-									<!-- danger 는 색깔 떄문에 넣은거! -->
-									<td>11-11:30</td>
-									<td>#</td>
-									<td>#</td>
-									<td>#</td>
-									<td>#</td>
-									<td>#</td>
-								</tr>
-							</tbody>
-						</table>
+				<div class="jumbotron p-md-0 text-white main-area">
+					<div id="timetable">
 					</div>
-				</div> 
+				</div>
 
 				<!-- footer 하단바 class="app-footer" -->
-				<footer class="app-footer py-1">
-					<div class="nav-scroller mb-2">
-						<nav class="nav justify-content-between">
-							<a class="btn btn-default btn-icon assignment home"  aria-label="Left Align" href="home.html">
-								<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-							</a>
-							<a class="btn btn-default btn-icon assignment menu" aria-label="Left Align" href="menu.html">
-								<span class="glyphicon glyphicon glyphicon-align-justify" aria-hidden="true"></span>
-							</a>
-							<a  class="btn btn-default btn-icon assignment time-table" aria-label="Left Align" href="timetable_page.html">
-								<span class="glyphicon glyphicon glyphicon-th" aria-hidden="true"></span>
-							</a>
-							<a class="btn btn-default btn-icon assignment my-page" aria-label="Left Align"" href="mypage.html">
-								<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-							</a>
-							<a class="btn btn-default btn-icon assignment" aria-label="Left Align" href="assignment.html">
-								<span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
-							</a>
-						</nav>
-					</div>
-				</footer>
-
+				<div id="footer">
+				</div>
 
 			</div>
 		</div>
 	</div>
-
-
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 </body>
 </html>
+<script src="js/common/header.js"></script>
+<script src="js/common/timetable.js"></script>
+<script src="js/common/footer.js"></script>
