--- a/front-webApp/assignment.html
+++ b/front-webApp/assignment.html
@@ -44,6 +44,7 @@
 
 
 						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
+
 						</div>
 
 
@@ -63,7 +64,7 @@
 
 					<!-- 과제전체 보여주는 영역 -->
 					<div style="overflow:auto; width:auto; height:300px;" class="mt-3 assignment-all scrollbar scrollbar-track scrollbar-thumb" data-offset="0">
-						<button class="assign-each" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Bottom">
+						<button class="assign-each" data-container="body" data-toggle="popover" title="assignment" data-placement="bottom" data-content="Bottom">
 							<h6 id="one" style="font-weight: bold" class="mb-2 mt-0">-assignment1</h6>
 							<p6>text</p6>		
 							popover				
@@ -102,16 +103,19 @@
 			</div>
 		</div>
 	</div>
-
+<script>
+	$(document).ready(function(){
+		$('[data-toggle="popover"]').popover(); 
+	});
+</script>
 </body>
 </html>
 
+
 <script>
-	$(function(){
-
-		$("[data-toggle='popover'").popover();
-	});
+$(document).ready(function(){
+    $('[data-toggle="popover"]').popover();   
+});
 </script>
-
 <script src="js/common/header.js"></script>
 <script src="js/common/footer.js"></script>
