--- a/front-webApp/assignment.html
+++ b/front-webApp/assignment.html
@@ -41,13 +41,8 @@
 								<button type="button" class="btn btn-sm btn-assigntype">Non</button>
 							</div>
 						</div>
-
-
 						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
-
 						</div>
-
-
 						<!-- log-out 아이콘 버튼 누르면 assignment_add.html로 이동 -->
 						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
 							<a class="btn btn-lg btn-add p-0" aria-label="Left Align" href="assignment_add.html">
@@ -60,15 +55,59 @@
 						</div>
 					</div>
 
-
-
 					<!-- 과제전체 보여주는 영역 -->
 					<div style="overflow:auto; width:auto; height:300px;" class="mt-3 assignment-all scrollbar scrollbar-track scrollbar-thumb" data-offset="0">
-						<button class="assign-each" data-container="body" data-toggle="popover" title="assignment" data-placement="bottom" data-content="Bottom">
-							<h6 id="one" style="font-weight: bold" class="mb-2 mt-0">-assignment1</h6>
-							<p6>text</p6>		
-							popover				
+						
+
+						<!-- Button trigger modal -->
+						<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+							Launch demo modal
 						</button>
+
+						<!-- Modal -->
+						<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+							<div class="modal-dialog" role="document">
+								<div class="modal-content">
+									<div class="modal-header">
+										<h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+										<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+											<span aria-hidden="true">&times;</span>
+										</button>
+									</div>
+									<div class="modal-body">
+										...
+									</div>
+									<div class="modal-footer">
+										<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+										<button type="button" class="btn btn-primary">Save changes</button>
+									</div>
+								</div>
+							</div>
+						</div>
+
+
+						<div class=" assign-each">
+							<h6 id="one" style="font-weight: bold" class="mb-2">-assignment2</h6>
+							<p6>text</p6>								
+						</div>
+						
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 						<div class=" assign-each">
 							<h6 id="two" style="font-weight: bold" class="mb-2">-assignment2</h6>
 							<p6>text</p6>								
@@ -103,19 +142,15 @@
 			</div>
 		</div>
 	</div>
-<script>
-	$(document).ready(function(){
-		$('[data-toggle="popover"]').popover(); 
-	});
-</script>
+
 </body>
 </html>
 
-
-<script>
-$(document).ready(function(){
-    $('[data-toggle="popover"]').popover();   
-});
+<script type="text/javascript">
+	$('#myModal').on('shown.bs.modal', function () {
+  $('#myInput').trigger('focus')
+})
 </script>
+
 <script src="js/common/header.js"></script>
 <script src="js/common/footer.js"></script>
