--- a/front-webApp/assignment.html
+++ b/front-webApp/assignment.html
@@ -48,25 +48,26 @@
 						<!-- log-out 아이콘 버튼 누르면 assignment_add.html로 이동 -->
 						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
 							<a class="btn btn-lg btn-add p-0" aria-label="Left Align" href="assignment_add.html">
-								<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
+								<span class="fas fa-plus-square"></span>
 							</a>
-
 							<button class="btn btn-lg btn-add p-0" aria-label="Left Align">
-								<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>
+								<span class="fas fa-minus-square"></span>
 							</button>
 						</div>
 					</div>
 
-					<!-- 과제전체 보여주는 영역 -->
+					<!-- 과제전체 보여주는 영역(스크롤바 포함) -->
+					<!-- 과제가 여러개 이면 스크롤 생김 -->
 					<div style="overflow:auto; width:auto; height:300px;" class="mt-3 assignment-all scrollbar scrollbar-track scrollbar-thumb" data-offset="0">
 
+						<!-- 스크롤바 제외한 과제들 보여주는 영역 -->
 						<div class="px-2">
+
 							<!-- Button trigger modal -->
 							<button type="button" class="btn btn-lg btn-block btn-outline-danger " data-toggle="modal" data-target="#exampleModal">
 								<h6 id="one" style="font-weight: bold" class="mb-2">-과제 제목</h6>
-								<p6>text</p6>	
+								<p6>과제 내용</p6>	
 							</button>
-
 							<!-- Modal -->
 							<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 								<div class="modal-dialog modal-dialog-centered modal-sm" role="document">
@@ -78,8 +79,9 @@
 											</button>
 										</div>
 										<div class="modal-body">
-											...
+											과제 내용
 										</div>
+										<!-- modal의 버튼들 -->
 										<div class="modal-footer">
 											<button type="button" class="btn btn-sm btn-primary" data-dismiss="modal">Close</button>
 											<a class="btn btn-sm btn-primary " aria-label="Left Align" href="assignment_add.html">Change</a>
@@ -89,26 +91,11 @@
 								</div>
 							</div>
 
-
-							<div class=" assign-each">
-								<h6 id="two" style="font-weight: bold" class="mb-2">-assignment2</h6>
-								<p6>text</p6>								
-							</div>
-							<div class="assign-each">
-								<h6 id="three" style="font-weight: bold" class="mb-2">-assignment3</h6>
-								<p6>text</p6>						
-							</div>
-							<div class="assign-each">
-								<h6 id="four" style="font-weight: bold" class="mb-2">-assignment4</h6>
-								<p6>text</p6>								
-							</div>
-							<div class="assign-each">
-								<h6 id="five" style="font-weight: bold" class="mb-2">-assignment5</h6>
-								<p6>text</p6>								
-							</div>
 						</div>
 						
+
 					</div>
+
 				</div>
 
 				<!-- footer 하단바 class="app-footer" -->
