--- a/front-webApp/assignment_add.html
+++ b/front-webApp/assignment_add.html
@@ -65,8 +65,8 @@ star-input>.input.focus{outline:1px dotted #ddd;}
 							<input type="text"  class="form-control form-control-lg mt-1 mb-1 flat-input">
 						</div>
 						<div class= "col-md-2 col-xs-2 mt-1 mb-1">
-							<a  class="btn btn-default btn-icon" aria-label="Left Align" href="find_subject.html">
-								<span class="fas fa-sistrix"></span>
+							<a  class="btn btn-lg btn-icon" aria-label="Left Align" href="find_subject.html">
+								<span class="fas fa-search"></span>
 							</a>
 						</div>
 
