시간표 ui 수정중!

--- a/front-webApp/assignment_add.html
+++ b/front-webApp/assignment_add.html
@@ -53,41 +53,35 @@ star-input>.input.focus{outline:1px dotted #ddd;}
 	<div class="container" data-spy = "scroll">
 		<div class="row justify-content-md-center justify-content-xs-center">
 			<div class="col-md-6 col-md-auto col-xs-6 col-xs-auto login-box  p-md-0 ">
-				<h1 class="text-center wdi-red">ADD ASSINGMENT</h1>
+				<h2 class="text-center wdi-red mt-1">ADD ASSINGMENT</h2>
 				<hr class="m-1">
 				<form>
 					<div class="form-row m-3">
-
 						<div class= "col-md-3 col-xs-3 mt-1 mb-1 label">
 							<h6> 과목명 </h6>
 						</div>
 						<div class= "col-md-7 col-xs-7 ">
-							<input type="text"  class="form-control form-control-lg mt-1 mb-1 flat-input">
+							<input type="text"  class="form-control form-control-sm mt-1 mb-1 flat-input">
 						</div>
 						<div class= "col-md-2 col-xs-2 mt-1 mb-1">
-							<a  class="btn btn-lg btn-icon" aria-label="Left Align" href="find_subject.html">
+							<a  class="btn btn-sm btn-icon" aria-label="Left Align" href="find_subject.html">
 								<span class="fas fa-search"></span>
 							</a>
 						</div>
-
-
-						<!--PW lable/input tag -->
 						<div class= "col-md-3 col-xs-3 mt-1 mb-1 label">
 							<h6> 제목 </h6>
 						</div>
 						<div class= "col-md-7 col-xs-7">
-							<input type="text"  class="form-control form-control-lg mt-1 mb-1 flat-input" >
+							<input type="text"  class="form-control form-control-sm mt-1 mb-1 flat-input" >
 						</div>
 
-						<!--NAME lable/input tag -->
 						<div class= "col-md-3 col-xs-3 mt-1 mb-1 label">
 							<h6> 내용 </h6>
 						</div>
 						<div class= "col-md-7 col-xs-7">
-							<input type="text"  class="form-control form-control-lg mt-1 mb-1 flat-input" >
+							<input type="text"  class="form-control form-control-sm mt-1 mb-1 flat-input" >
 						</div>
 
-						<!--GRADE lable/Dropdow tag -->
 						<div class= "col-md-3 col-xs-3 mt-1 mb-1 label">
 							<h6> 중요도 </h6>
 						</div>
@@ -119,13 +113,12 @@ star-input>.input.focus{outline:1px dotted #ddd;}
 
 						<!--join/cancel button -->
 						<div class= "col-md-6 col-xs-6">
-							<a class="btn btn-block btn-submit" href="assignment.html"> SUBMIT</a>
+							<a class="btn btn-sm btn-block btn-submit" href="assignment.html"> SUBMIT</a>
 						</div>
 
 						<div class= "col-md-6 col-xs-6">
-							<a class="btn btn-block btn-cancel" href="assignment.html"> CANCEL</a>
+							<a class="btn btn-sm btn-block btn-cancel" href="assignment.html"> CANCEL</a>
 						</div>
-
 					</div>
 
 				</form>
