--- a/front-webApp/home.html
+++ b/front-webApp/home.html
@@ -34,7 +34,7 @@
 				
 				<!-- 상단바와 하단바를 제외한 부분 class="main-area" -->
 				<div class="jumbotron p-md-0 text-white main-area">
-					<div style="cursor:pointer" onclick="location.href='timetable_page.html';" >
+					<div style="cursor:pointer; height: auto; min-height: 100px; max-height:300px;overflow:auto;" onclick="location.href='timetable_page.html';" class="scrollbar scrollbar-track scrollbar-thumb" data-spy="scroll" data-offset="0">
 						<div id="timetable">
 						</div>
 					</div>
