--- a/front-webApp/assignment.html
+++ b/front-webApp/assignment.html
@@ -29,8 +29,7 @@
 			<div class="col col-md-6 col-md-auto col-xs-6 col-xs-auto col-sm-6 col-sm-auto col-lg-6 col-lg-auto login-box ">
 
 				<!-- header (상단바) class="app-header" -->
-				<div id="header">
-				</div>
+				<div id="header"></div>
 
 				<!-- 상단바와 하단바를 제외한 부분 class="main-area" -->
 				<div class="jumbotron m-2 p-0 text-white rounded main-area">
@@ -64,16 +63,16 @@
 						<div class="px-2">
 
 							<!-- Button trigger modal -->
-							<button type="button" class="btn btn-lg btn-block btn-outline-danger " data-toggle="modal" data-target="#exampleModal">
+							<button id="popbutton_assignment" type="button" class="btn btn-lg btn-block btn-outline-danger">
 								<h6 id="one" style="font-weight: bold" class="mb-2">-과제 제목</h6>
 								<p6>과제 내용</p6>	
 							</button>
 							<!-- Modal -->
-							<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+							<div class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
 								<div class="modal-dialog modal-dialog-centered modal-sm" role="document">
 									<div class="modal-content">
 										<div class="modal-header">
-											<h5 class="modal-title" id="exampleModalLabel">과제 제목</h5>
+											<h5 class="modal-title"> 과제 제목 </h5>
 											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 												<span aria-hidden="true">&times;</span>
 											</button>
@@ -83,8 +82,8 @@
 										</div>
 										<!-- modal의 버튼들 -->
 										<div class="modal-footer">
-											<button type="button" class="btn btn-sm btn-primary" data-dismiss="modal">Close</button>
 											<a class="btn btn-sm btn-primary " aria-label="Left Align" href="assignment_add.html">Change</a>
+											<button type="button" class="btn btn-sm btn-danger" data-dismiss="modal">Close</button>
 											<button type="button" class="btn btn-sm btn-danger" data-dismiss="modal">Delete</button>
 										</div>
 									</div>
@@ -92,15 +91,14 @@
 							</div>
 
 						</div>
-						
+
 
 					</div>
 
 				</div>
 
 				<!-- footer 하단바 class="app-footer" -->
-				<div id="footer">
-				</div>
+				<div id="footer"></div>
 				
 			</div>
 		</div>
@@ -109,6 +107,14 @@
 </body>
 </html>
 
+<!-- modal -->
+<script type="text/javascript">
+	$(function(){
+		$("#popbutton_assignment").click(function(){
+			$('div.modal').modal();
+		})	
+	})
+</script>
 
 <script src="js/common/header.js"></script>
 <script src="js/common/footer.js"></script>
