--- a/front-webApp/timetable_page.html
+++ b/front-webApp/timetable_page.html
@@ -21,6 +21,7 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 </head>
 
+
 <body class="text-center">
 
 	<!-- Container -->
@@ -33,7 +34,39 @@
 				</div>
 
 				<!-- 상단바와 하단바를 제외한 부분 class="main-area" -->
-				<div class="jumbotron p-md-0 text-white main-area">
+				<div class="jumbotron p-md-0 main-area">
+					<div class="row col-auto justify-content-end setting">
+						<div class= "col-10 col-xs-10 col-sm-10 col-lg-10 col-md-10">
+						</div>
+
+						<div class= "col-2 col-xs-2 col-sm-2 col-lg-2 col-md-2">
+							<button id="popbutton_timetable_page" type="button" class="btn btn-block btn-lg btn-add p-0" aria-label="Left Align" >
+								<span class="fas fa-plus-square"></span>
+							</button>
+							<!-- Modal -->
+							<div class="modal fade" tabindex="-1" role="dialog">
+								<div class="modal-dialog modal-dialog-centered modal-sm" role="document">
+									<div class="modal-content">
+										<div class="modal-header">
+											<h5 class="modal-title"> 과목추가 </h5>
+											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+												<span aria-hidden="true">&times;</span>
+											</button>
+										</div>
+										<div class="modal-body">
+											과목 리스트
+										</div>
+										<!-- modal의 버튼들 -->
+										<div class="modal-footer">
+											<a class="btn btn-sm btn-primary " aria-label="Left Align" >Add</a>
+											<button type="button" class="btn btn-sm btn-danger" data-dismiss="modal">Close</button>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
 					<div id="timetable">
 					</div>
 				</div>
@@ -47,6 +80,37 @@
 	</div>
 </body>
 </html>
+
+<!-- modal -->
+<script type="text/javascript">
+	$(function(){
+		$("#popbutton_timetable_page").click(function(){
+			$('div.modal').modal();
+		})	
+	})
+</script>
+ 
+
+<!-- table click event -->
+<script>
+	var table = document.getElementById("table"),rIndex,cIndex;
+
+	for(var i = 1 ; i < table.rows.length ; i++)
+	{
+		for(var j = 1 ; j<table.rows[i].cells.length ; j++){
+			table.rows[i].cells[j].onclick = function()
+			{
+				rIndex = this.parentElement.rowIndex;
+				cIndex = this.cellIndex;
+				console.log("ROW:" +rIndex+ ", Cell:" +cIndex);
+			}
+		}
+
+	}	
+	
+
+</script>
+
 <script src="js/common/header.js"></script>
 <script src="js/common/timetable.js"></script>
 <script src="js/common/footer.js"></script>
