Revised Login Button

--- a/front-webApp/index.html
+++ b/front-webApp/index.html
@@ -49,7 +49,9 @@
 
                <!-- login/join/find pw button-->
                <div class= "col-md-12 col-xs-12" >
-                  <a id="submit">LOGIN</a>
+                 <a class="btn btn-lg btn-block btn-login" id = "submit" >
+               LOGIN
+             </a>
                </div>
                <div class= "col-md-6 col-xs-6">
                   <a class="btn btn-lg btn-xs btn-block btn-join" href="join.html">
